# carbon-lang

./: .arcconfig  .arclint  .bazelignore  .bazeliskrc  .bazelrc  .bazelversion  .clang-format  .clang-tidy  .clangd  .codespell_ignore  .gdbinit  .git-blame-ignore-revs  .gitallowed  .gitattributes  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .mailmap  .pre-commit-config.yaml  .pre-commit-config.yaml.saved  .pre-commit-search-and-replace.yaml  .prettierrc  .prettierrc.yaml  .spellcheck.yml  BUILD  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  D80713.diff  DIFF  LICENSE  MODULE.bazel  Makefile  Package.resolved  Package.swift  README.md  SECURITY.md  WORKSPACE  bad-signal-to-kill-thread.patch  (+24 more)
bolt/: AddressRangesDWARFObject.h  BasicBlockOffsetRanges.cpp  BasicBlockOffsetRanges.h  BinaryBasicBlock.cpp  BinaryBasicBlock.h  BinaryContext.cpp  BinaryContext.h  BinaryData.cpp  BinaryData.h  BinaryFunction.cpp  BinaryFunction.h  BinaryFunctionProfile.cpp  BinaryLoop.h  BinaryPass.cpp  BinaryPass.h  BinaryPassManager.cpp  BinaryPassManager.h  BinaryPasses.cpp  BinaryPasses.h  BinaryPatcher.cpp  BinaryPatcher.h  BinarySection.cpp  BinarySection.h  BoltDiff.cpp  CMakeLists.txt  CODE_OWNERS.TXT  CacheMetrics.cpp  CacheMetrics.h  CalcCacheMetrics.cpp  CalcCacheMetrics.h  DWARFRewriter.cpp  DataAggregator.cpp  DataAggregator.h  DataReader.cpp  DataReader.h  DebugArangesWriter.cpp  DebugArangesWriter.h  DebugData.cpp  DebugData.h  DebugLineTableRowRef.cpp  (+31 more)
bolt/Passes/: Aligner.cpp  Aligner.h  AllocCombiner.cpp  AllocCombiner.h  BinaryFunctionCallGraph.cpp  BinaryFunctionCallGraph.h  BinaryPasses.cpp  BinaryPasses.h  CMakeLists.txt  CachePlusReorderAlgorithm.cpp  CallGraph.cpp  CallGraph.h  CallGraphWalker.cpp  CallGraphWalker.h  DataflowAnalysis.cpp  DataflowAnalysis.h  DataflowInfoManager.cpp  DataflowInfoManager.h  DominatorAnalysis.h  FrameAnalysis.cpp  FrameAnalysis.h  FrameOptimizer.cpp  FrameOptimizer.h  HFSort.cpp  HFSort.h  HFSortPlus.cpp  IndirectCallPromotion.cpp  IndirectCallPromotion.h  Inliner.cpp  JTFootprintReduction.cpp  (+27 more)
clang/: .arcconfig  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CODE_OWNERS.TXT  INSTALL.txt  LICENSE.TXT  Makefile  ModuleInfo.txt  NOTES.txt  README.txt  TODO.txt  a.out  darwin-stdlib.cpp
clang-tools-extra/: .arcconfig  .gitignore  CMakeLists.txt  CODE_OWNERS.TXT  LICENSE.TXT  Makefile  README  README.txt
compiler-rt/: .arcconfig  .gitignore  CMakeLists.txt  CODE_OWNERS.TXT  CREDITS.TXT  ConfigureChecks.cmake  LICENSE.TXT  Makefile  README.txt  config.h.cmake
cross-project-tests/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
debuginfo-tests/: CMakeLists.txt  README.txt  aggregate-indirect-arg.cpp  apple-accel.cpp  asan-blocks.c  asan-deque.cpp  asan.c  block_var.m  blocks.m  ctor.cpp  dbg-arg.c  dbg-arg.ll  dbg-declare.ll  dbg-declare2.ll  foreach.m  forward-declare-class.cpp  lit.cfg.py  lit.local.cfg  lit.site.cfg.py.in  llgdb.py  local-var.ll  local-var2.ll  nested-struct.cpp  nrvo-string.cpp  safestack.c  smart-ptr-1.cpp  sret.cpp  stack-var.c  static-member-2.cpp  static-member.cpp  test_debuginfo.pl  unused-boolean-arg.ll  vla.c
flang/: .clang-format  .clang-tidy  .drone.star  .gitignore  C++style.md  CMakeLists.txt  CODE_OWNERS.TXT  Makefile  ParserCombinators.md  README.md  attr.cc  attr.h  basic-parsers.h  c++style.md  c++style.txt  char-buffer.cc  char-buffer.h  char-parsers.h  cooked-chars.h  cooked-tokens.h  debug-parser.h  f2018-demo.cc  flatten.cpp  format-specification.h  grammar.h  idioms.cc  idioms.h  indirection.h  message.cc  message.h  parse-state.h  parse-tree.cc  parse-tree.h  parser-combinators.txt  position.cc  position.h  preprocessor.cc  preprocessor.h  prescan.cc  prescan.h  (+5 more)
github_tools/: BUILD  MODULE.bazel  README.md  WORKSPACE  github_helpers.py  github_helpers_test.py  pr_comments.py  pr_comments_test.py  requirements.txt  update_label_access.py  update_label_access_test.py
libc/: .clang-tidy  .gitignore  CMakeLists.txt
libclc/: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.TXT  README.TXT  check_external_calls.sh  compile-test.sh  configure.py  libclc.pc.in
libcxx/: .arcconfig  .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CREDITS.TXT  LICENSE.TXT  Makefile  NOTES.TXT  RELEASE.TXT  TODO.TXT  appveyor-reqs-install.cmd  appveyor.yml  install-appveyor-reqs.cmd
libcxxabi/: .arcconfig  .gitignore  CMakeLists.txt  CREDITS.TXT  LICENSE.TXT
libunwind/: .arcconfig  CMakeLists.txt  LICENSE.TXT
lld/: .arcconfig  .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.TXT  Makefile  README.md  lld-2018June4
lldb/: .arcconfig  .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CODE_OWNERS.txt  INSTALL.txt  LICENSE.TXT  Makefile  lldb.runcontext  lldb_shared_base.py  use_lldb_suite_root.py
llgo/: .arcconfig  CMakeLists.txt  LICENSE.TXT  README.TXT  buildslave-config.yaml  libgo-check-failures.diff  libgo-noext.diff  llgo-go.sh  update_third_party.sh
llvm/: .arcconfig  .clang-tidy  .cvsignore  .gitattributes  .gitignore  .swp  0007-Fast-math-test-for-SimplifyInstruction-fold-multiply.patch  CMakeLists.txt  CODE_OWNERS.TXT  CREDITS.TXT  D68650.diff  LICENSE.TXT  LLVMBuild.txt  Makefile  Makefile.FreeBSD  Makefile.Linux  Makefile.SunOS  Makefile.am  Makefile.common  Makefile.config  Makefile.config.in  Makefile.rules  Makefile.rules.am  Makefile_config  Makefile_rules  ModuleInfo.txt  README.txt  RELEASE_TESTERS.TXT  aclocal.m4  build-for-llvm-top.sh  configure  configure.ac  configure_am  cvsupdate  getsomesrcs.sh  getsrcs.sh  llvm.spec  llvm.spec.in  ltmain.sh  makellvm  (+1 more)
mlir/: .clang-tidy  CMakeLists.txt  README.md
openmp/: .arcconfig  .gitignore  CMakeLists.txt  CREDITS.txt  LICENSE.TXT  LICENSE.txt  README.rst
polly/: .arcconfig  .arclint  .gitattributes  .gitignore  CMakeLists.txt  CREDITS.txt  LICENSE.txt  Makefile  Makefile.common.in  Makefile.config.in  README  configure
pstl/: .arcconfig  .clang-format  CMakeLists.txt  CREDITS.txt  LICENSE.TXT  LICENSE.txt  ParallelSTLConfig.cmake.in  README.md
runtimes/: CMakeLists.txt  Tests.cmake.in
(+139547 files in other folders)
