# Part of the Carbon Language project, under the Apache License v2.0 with LLVM
# Exceptions. See /LICENSE for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

[metadata]
name = carbon_lang_pre_commit_hooks

[options]
packages = find:
python_requires = >= 3.8.5
install_requires =
    clang-format==13.0.1

[options.entry_points]
console_scripts =
    format-grammar = executable_semantics.syntax.format_grammar:main

[flake8]
max-line-length = 80
# E203: This warning is not PEP 8 compliant.
# E402: Allow the pythonpath modifications before repo-local imports.
# W503: flake8 v3.8.4 is inconsistent with black v20.8b1 (pre-commit run -a).
ignore = E203,E402,W503
